--- a/.github/workflows/qd.yml
+++ b/.github/workflows/qd.yml
@@ -9,10 +9,11 @@ on:
 jobs:
   bot:
     runs-on: ubuntu-latest # 运行环境为最新版的Ubuntu
+    strategy:
+     matrix:
+       node-version: [18.4.0]
     steps:
       - name: 'Checkout codes' # 步骤一，获取仓库代码
         uses: actions/checkout@v1
-        with:
-          node-version: '18.x'
       - name: 'Run sign.sh' # 步骤二，执行sh命令文件
         run: bash sign.sh && node publish-question.js
