--- a/.github/workflows/qd.yml
+++ b/.github/workflows/qd.yml
@@ -14,6 +14,10 @@ jobs:
        node-version: [18.4.0]
     steps:
       - name: 'Checkout codes' # 步骤一，获取仓库代码
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+           node-version: '18.4.0'
       - name: 'Run sign.sh' # 步骤二，执行sh命令文件
         run: bash sign.sh && node publish-question.js
