--- a/.github/workflows/qd.yml
+++ b/.github/workflows/qd.yml
@@ -20,4 +20,4 @@ jobs:
         with:
            node-version: '18.4.0'
       - name: 'Run sign.sh' # 步骤二，执行sh命令文件
-        run: bash sign.sh && node publish-question.js
+        run: node publish-question.js
